# virtpack

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
algorithms/: expander.py  scorer.py
cli/: main.py
core/: cluster_state.py  ha_injector.py  normalizer.py  placement_engine.py
docs/: hld.md  lld.md
docs/uml/: class.puml  sequence_placement.puml
loaders/: rvtools_parser.py  yaml_loader.py
models/: __init__.py  config.py  node.py  vm.py
report/: csv_exporter.py  terminal_summary.py
tests/: test_cli.py  test_cluster_state.py  test_config.py  test_csv_exporter.py  test_expander.py  test_ha_injector.py  test_node.py  test_normalizer.py  test_placement_engine.py  test_rvtools_parser.py  test_scorer.py  test_terminal_summary.py  test_vm.py  test_yaml_loader.py
