[project]
name = "virtpack"
version = "0.1.0"
description = "Deterministic OpenShift Virtualization capacity planner CLI"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
    "typer>=0.12,<1",
    "pandas>=2.2,<3",
    "rich>=13.0,<14",
    "openpyxl>=3.1,<4",
    "pyyaml>=6.0,<7",
]

[project.scripts]
virtpack = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "models*", "algorithms*", "loaders*", "report*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=6.0,<7",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "pandas-stubs>=2.2,<3",
    "types-PyYAML>=6.0,<7",
]

# ─── Ruff (linter + formatter) ────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long — handled by formatter
    "UP007",   # Use X | Y for union — we use this already, but allow Optional too
    "RUF002",  # ambiguous Unicode in docstrings — intentional math symbols (×, α, etc.)
    "RUF003",  # ambiguous Unicode in comments — intentional section separators (–)
]

[tool.ruff.lint.isort]
known-first-party = ["models", "core", "algorithms", "loaders", "cli", "report"]

# ─── Mypy (static type checker) ───────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "."
explicit_package_bases = true
files = ["models/", "core/", "algorithms/", "cli/", "loaders/", "report/", "tests/"]

[[tool.mypy.overrides]]
module = ["pandas", "openpyxl"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ─── Pytest ───────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

# ─── Coverage ─────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["models", "core", "algorithms", "cli", "loaders", "report"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
]
